--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Telpon app for goto" />
+    <meta name="description" content="Selfie app" />
     <link rel="icon" type="image/svg+xml" href="/favicon.jpg" />
     <link rel="apple-touch-icon" href="/favicon.jpg" sizes="180x180" />
     <meta name="theme-color" content="#ffffff" />
-    <title>Telpon - dhnlr</title>
+    <title>Selfie - dhnlr</title>
   </head>
   <body>
     <div id="root"></div>
